tests/semantic/fail/array-count-not-int.tiger
let
      var x := int["4"] of 0
in

end
